<resources>
    <string name="app_name">Navegacion-Fragmentacion</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_cambiar">Cambiar</string>
    <string name ="greeting_text">Hola %s!</string>
    <string name="hint_nombre">Nombre</string>
    <string name="action_continue">Continuar</string>
    <string name="hint_apellidos">Apellidos</string>
    <string name="hint_edad">Edad</string>
    <string name="hint_university">Universidad</string>
    <string name="hint_carrer">Carrera</string>

</resources>