<?xml version="1.0" encoding="utf-8"?>
<!-- Implementando DataBinding-->
<!-- Creando un EditText y un Button -->
<!-- Incluir la Data que usaremos, en el tipo, va la ruta del MainViewModel -->
<!-- En EditText se inplemento el android Text, para mandar a llamar el ViewModel donde se mandara a llamar en name -->
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="viewModel"
            type="com.vasquez.navegacion_fragmentacion.MainViewModel" />
    </data>
<LinearLayout
    android:padding="@dimen/dafault_gap"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".HomeFragment">
<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:textSize="18dp"
    android:text="Ingrese sus Datos Personales" />

<EditText
    android:padding="16dp"
    android:id="@+id/name_edit_text"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@={viewModel.name}"
    android:hint="@string/hint_nombre" />

    <EditText
        android:padding="16dp"
        android:id="@+id/lastname_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@={viewModel.lastName}"
        android:hint="@string/hint_apellidos" />

    <EditText
        android:padding="16dp"
        android:id="@+id/gender_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@={viewModel.gender}"
        android:hint="Genero" />


    <EditText
        android:padding="16dp"
        android:id="@+id/editTextDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="date"
        android:text="@={viewModel.birthday}"
        android:hint="Fecha de Nacimiento"/>

    <EditText
        android:padding="16dp"
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:text="@={viewModel.email}"
        android:hint="Email"/>

    <EditText
        android:padding="@dimen/dafault_gap"
        android:id="@+id/editTextPhone2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="phone"
        android:text="@={viewModel.phone}"
        android:hint="Numero de Telefono"/>

    <Button
        android:layout_marginTop="@dimen/medium_gap"
        android:id="@+id/action_continu"
        android:layout_width="wrap_content"
        android:layout_gravity="end"
        android:layout_height="wrap_content"
        android:text="@string/action_continue" />


</LinearLayout>
</layout>